--- a/templates/pages/base.html
+++ b/templates/pages/base.html
@@ -19,6 +19,11 @@
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="{% url 'totals' %}">Totals</a>
             </li>
+              {% if user.is_authenticated%}
+              <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="{% url 'logout' %}">Logout</a>
+              </li>
+              {% endif %}
           </ul>
         </div>
       </div>
