decimal field changed and user permissions

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -4,7 +4,8 @@
 <div class="form-group">
     <form method="post" action=""> {%csrf_token%}
         {{form|crispy}}
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <div style="padding: 5px;"></div>
+        <button type="submit" class="btn btn-info">Submit</button>
     </form>
 </div>
 
